--- a/templates/index93.html
+++ b/templates/index93.html
@@ -15,7 +15,7 @@
 
 
 
-<link href="/static/css/styles1799.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/static/css/styles7799.css" rel="stylesheet" type="text/css" media="all" />
 <!-- <script type="text/javascript" src="js/jquery.min.js"></script> -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
@@ -25,7 +25,13 @@
 
 </head>
 <body>
-	<div class="main">
+	<div id="myDIV" class="loader">
+		
+	</div>
+	<div id="myDiv2" class = "loser">
+		<h1>Awaiting your transaction from your mobile</h1>
+	</div>
+	<div class="main" id="sup">
 		<div class="content">
 			
 			<script src="/static/js/easyResponsiveTabs.js" type="text/javascript"></script>
@@ -205,7 +211,7 @@
 
 	<script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-firestore.js"></script>
 
-	<script src="{{ url_for('static', filename='js/app7990.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/app9095.js') }}"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
 </body>
