--- a/static/css/styles7799.css
+++ b/static/css/styles7799.css
@@ -21,7 +21,67 @@ nav.vertical ul li{	display:block;}/* vertical menu */
 nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
 img{max-width:100%;}
 /*end reset*/
+.loader {
+	border: 16px solid #f3f3f3;
+	position:absolute;
+	left: 700px;
+	top:500px;
+	z-index: 100;
+	border-radius: 50%;
+	border-top: 16px solid #3498db;
+	width: 120px;
+	height: 120px;
+	-webkit-animation: spin 2s linear infinite; /* Safari */
+	animation: spin 2s linear infinite;
+	display: none;
+  }
+  .loser {
+	border: 16px solid #f3f3f3;
+	position:absolute;
+	left: 900px;
+	top:500px;
+	z-index: 100;
+	border-radius: 50%;
+	border-top: 16px solid #3498db;
+	width: 120px;
+	height: 120px;
 
+	display: none;
+  }
+  .loser2 {
+
+	position:absolute;
+	left: 900px;
+	top:350px;
+	z-index: 100;
+	
+
+  }
+  .loader2{
+	border: 16px solid #f3f3f3;
+	position:absolute;
+	left: 700px;
+	top:300px;
+	z-index: 100;
+	border-radius: 50%;
+	border-top: 16px solid #3498db;
+	width: 120px;
+	height: 120px;
+	-webkit-animation: spin 2s linear infinite; /* Safari */
+	animation: spin 2s linear infinite;
+
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+	0% { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+  }
 body{
 padding:0;
 margin:0;
@@ -45,6 +105,9 @@ label{
 /*-- main --*/
 .main {
     padding: 50px 0;
+}
+.main2 {
+	display: none;
 }
 .main h1{
 	font-size:35px;
@@ -82,6 +145,7 @@ p.footer a:hover{
     background: transparent;
     border: 0px solid #e7ebee;	
 }
+
 .pay-tabs h2{
     font-size: 26px;
     text-align: center;
@@ -335,6 +399,7 @@ input.text_box {
     left: 0;
     top: 1px;
 }
+
 .single-bottom ul li input[type="checkbox"]:checked+label span:first-child:before {
   content: "";
   background:url(../images/11.png)no-repeat;
