--- a/static/css/styles9929.css
+++ b/static/css/styles9929.css
@@ -187,7 +187,8 @@ p.footer a:hover{
 	clear: left;
     padding: 2em 2.5em;
     background: #fff;
-    border: 1px solid #e7ebee;	
+	border: 1px solid #e7ebee;	
+	box-shadow: 5px 20px 5px rgba(0,0,0,0.7);
 }
 h2.resp-accordion {
 	cursor: pointer;
@@ -240,8 +241,9 @@ li.resp-tab-item.resp-tab-active span label {
     padding: 8px;
     font-size: 13px;
     font-weight: 600;
-    border: 1px solid #e7ebee;
-    outline: none;
+    border: 1px solid black;
+	outline: none;
+	box-shadow: 1px 2px 1px rgba(0,0,0,0.7);
     color: black;
     border-radius: 5px;
     margin-bottom: 20px;
@@ -316,7 +318,8 @@ li.resp-tab-item.resp-tab-active span label {
 }
 input.text_box {
     background: #fcfcfc;
-    border: 1px solid #ebeced;
+	border: 1px solid black;
+	
 }
 .tab-form-right {
     float: right;
@@ -327,9 +330,10 @@ input.text_box {
     padding: 8px;
     font-size: 13px;
     font-weight: 600;
-    border: 1px solid #e7ebee;
+    border: 1px solid black;
     outline: none;
-    color: black;
+	color: black;
+	box-shadow: 1px 2px 1px rgba(0,0,0,0.7);
     border-radius: 5px;
     margin-bottom: 30px;
     transition:0.5s all;
@@ -556,6 +560,8 @@ width:46%;
 .con-btm-right {
   padding-right: 0;
 }
+
+
 .user-login form input[type="text"], .user-login form input[type="password"] {
   margin: 0 0 24px 0;
   background: #fcfcfc;
