--- a/templates/index269.html
+++ b/templates/index269.html
@@ -62,10 +62,10 @@
 											<h3>Personal Information</h3>
 											<form>
 												<div class="tab-for">				
-													<h5>EMAIL ADDRESS</h5>
-														<input type="text" value="">
+													<h5>Merchant ID</h5>
+														<input type="text" value="CardPay" disabled>
 													<h5>Amount</h5>													
-														<input id="bname" type="text" value="">
+														<input id="bname" type="text" value="" required />
 												</div>			
 											</form>
 											<h3 class="pay-title">Credit Card Info</h3>
